# prawjector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
examples/.prawjector/: prawjector.json
src/: app.rs  config.rs  git_info.rs  main.rs  ui.rs  zellij.rs
