[package]
name = "prawjector"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "=0.30.0"
crossterm = "=0.29.0"
clap = { version = "=4.6.1", features = ["derive"] }
color-eyre = "=0.6.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
shellexpand = "=3.1.2"
git2 = { version = "=0.20.4", default-features = false }
dirs = "=6.0.0"
tempfile = "=3.27.0"
time = "=0.3.47"
